Fix KNN and DTree issues
* Refactor API response models to be more standardised
